Link Form in homepage to Detail page

--- a/app/views/home/_forms.html.slim
+++ b/app/views/home/_forms.html.slim
@@ -14,7 +14,7 @@
             .latest-news__container
               - if @forms.length > 2
                 - @forms[2..-1].each do |form|
-                  = link_to '#', class: 'latest-news latest-news--inline' do
+                  = link_to form, class: 'latest-news latest-news--inline' do
                     .latest-news__content
                       h4.latest-news__title = form.title.truncate(50)
                       .latest-news__full-date = format_datetime(form.created_at)
