--- a/app/views/admin/services/show.html.slim
+++ b/app/views/admin/services/show.html.slim
@@ -17,6 +17,9 @@
                   th = t('service.title')
                   td = @service.title
                 tr
+                  th = t('service.priority')
+                  td = @service.priority
+                tr
                   th = t('service.short_description')
                   td = @service.short_description
                 tr
