--- a/app/views/admin/services/index.html.slim
+++ b/app/views/admin/services/index.html.slim
@@ -15,6 +15,7 @@
                 thead
                   tr
                     th = t('service.title')
+                    th = t('service.priority')
                     th = t('service.short_description')
                     th = t('service.content')
                     th = t('service.picture')
@@ -26,6 +27,7 @@
                   - @services.each do |service|
                     tr
                       td = service.title
+                      td = service.priority
                       td = service.short_description
                       td == service.content
                       td = image_tag service.picture.url, class: 'img-responsive'
