--- a/app/assets/stylesheets/home/_slider.scss
+++ b/app/assets/stylesheets/home/_slider.scss
@@ -64,7 +64,7 @@
   }
 
   .headline {
-    color: $tan;
+    color: $white;
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 5px;
@@ -148,7 +148,7 @@
     }
 
     .content {
-      top: 100px;
+      top: 160px;
     }
 
     .headline {
