--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -28,8 +28,8 @@ a {
 }
 
 .btn.btn-raised.btn-primary {
-  background: $tan linear-gradient(to bottom, $tan, $darker-tan);
-  border-color: $tan;
+  background: $pavlova;
+  border-color: $pavlova;
 }
 
 .btn.btn-raised:not(.btn-link):hover.btn-primary {
