Update service description truncate length

--- a/app/views/forms/show.html.slim
+++ b/app/views/forms/show.html.slim
@@ -16,6 +16,7 @@
     .entry-content
       p == @form.content
 
-    hr
-      p Tải xuống đính kèm
-      = link_to @form.attachment_file_name, @form.attachment.url
+    - if @form.attachment_file_name
+      hr
+        p Tải xuống đính kèm
+        = link_to @form.attachment_file_name, @form.attachment.url
