--- a/app/views/admin/forms/show.html.slim
+++ b/app/views/admin/forms/show.html.slim
@@ -21,7 +21,10 @@
                   td = link_to @form.form_category.name, @form.form_category.becomes(Category)
                 tr
                   th = t('form.form')
-                  td = link_to @form.attachment_file_name, @form.attachment.url
+                  - if @form.attachment_file_name
+                    td = link_to @form.attachment_file_name, @form.attachment.url
+                  - else
+                    td
                 tr
                   th = t('form.content')
                   td == @form.content
