Parse HTML for service short description

--- a/app/views/admin/services/index.html.slim
+++ b/app/views/admin/services/index.html.slim
@@ -27,7 +27,7 @@
                     tr
                       td = service.title
                       td = service.priority
-                      td = service.short_description
+                      td == service.short_description
                       td == service.content
                       td = service.slug
                       td = format_datetime(service.created_at)
