--- a/app/views/admin/services/show.html.slim
+++ b/app/views/admin/services/show.html.slim
@@ -21,7 +21,7 @@
                   td = @service.priority
                 tr
                   th = t('service.short_description')
-                  td = @service.short_description
+                  td == @service.short_description
                 tr
                   th = t('service.content')
                   td == @service.content
