Fix forms layout

--- a/app/assets/stylesheets/home/_news.scss
+++ b/app/assets/stylesheets/home/_news.scss
@@ -20,7 +20,7 @@
     .latest-news__content {
       background-color: $white;
       display: block;
-      padding: 23px 30px;
+      padding: 20px;
       transition: all 100ms ease-out;
     }
   }
