--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -38,7 +38,7 @@
             li.has-children
               = link_to "#{t('home_page.header.service')}", services_path
               ul.sub-menu
-                - Service.all.each do |service|
+                - Service.all.order(priority: :asc).each do |service|
                   li = link_to service.title, service
             li = active_link_to "#{t('home_page.header.news')}", posts_path, active: :exact
             li = active_link_to "#{t('home_page.header.documents')}", forms_path, active: :exact
