--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -32,7 +32,7 @@
                       td = image_tag post.picture.url, class: 'img-responsive'
                       td = link_to post.post_category.name, admin_category_path(post.post_category)
                       td = link_to post.user.name, admin_user_path(post.user)
-                      td == post.content
+                      td == post.content.truncate(400)
                       td = post.slug
                       td = format_datetime(post.created_at)
                       td = format_datetime(post.updated_at)
