--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -8,7 +8,7 @@
           span.meta-data__separator |
           span.meta-data__author = post.user.name
           span.meta-data__separator |
-          span.meta-data__categories = link_to post.post_category.name, post.post_category
+          span.meta-data__categories = link_to post.category.name, post.category
       h2.title
         = link_to post.title, post
     
