--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -30,7 +30,7 @@
                       td = post.id
                       td = post.title
                       td = image_tag post.picture.url, class: 'img-responsive'
-                      td = link_to post.post_category.name, admin_category_path(post.post_category)
+                      td = link_to post.category.name, admin_category_path(post.category)
                       td = link_to post.user.name, admin_user_path(post.user)
                       td == post.content.truncate(400)
                       td = post.slug
