--- a/app/views/forms/_form.html.slim
+++ b/app/views/forms/_form.html.slim
@@ -5,7 +5,7 @@
         .meta-data
           time datetime="#{form.created_at}" = format_datetime(form.created_at)
           span.meta-data__separator |
-          span.meta-data__categories = form.form_category.name
+          span.meta-data__categories = form.category.name
       h2.title
         = link_to form.title.truncate(100), form
     .entry-content
