--- a/app/views/layouts/posts.html.slim
+++ b/app/views/layouts/posts.html.slim
@@ -35,9 +35,9 @@ html
             .widget.widget_categories
               h4.sidebar__headings = t('layouts.posts.category_heading')
               ul
-                - PostCategory.all.each do |category|
+                - Category.where(id: Post.where(type: :Post).pluck(:category_id)).each do |category|
                   li
-                    = link_to category.name, category_posts_path(category)
+                    = link_to category.name, posts_path(category_id: category.id)
 
             .widget
               h4.sidebar__headings Facebook
