--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,46 +1,10 @@
 .shared-footer-container
   .footer
-    / .footer-top
-      / .container
-        / .row
-          / .col-xs-12.col-md-3
-          /   p
-          /     = link_to (image_tag 'logo.jpg', class: 'img-responsive'), root_url
-          /   p Niềm vui của các bạn là hạnh phúc của chúng tôi.
-
-          / .col-xs-12.col-md-3
-          /   h6 Điều hướng
-          /   ul
-          /     li = link_to 'Home', root_path
-          /     li = link_to 'Our Services', services_path
-          /     li = link_to 'About Us', about_us_path
-          /     li = link_to 'Legal News', '#'
-          /     li = link_to 'Contact Us', contact_us_path
-
-          / .col-xs-12.col-md-3
-          /   h6 Liên kết
-          /   ul
-          /     li = link_to 'All Services', services_path
-          /     - Service.all.each do |service|
-          /       li = link_to service.title, service
-
-          / .col-xs-12.col-md-3
-          /   p
-          /     = link_to 'https://www.facebook.com/khanghailawfirm', class: 'social-icon', target: '_blank' do
-          /       = fa_icon 'facebook-square'
-          /     | &nbsp;
-          /     = link_to 'javascript:', class: 'social-icon', target: '_blank' do
-          /       = fa_icon 'twitter-square'
-          /     | &nbsp;
-          /     = link_to 'javascript:', class: 'social-icon', target: '_blank' do
-          /       = fa_icon 'youtube-square'
-
     .footer-bottom
       .container
         .row
           .col-xs-12.col-md-6
             .footer-bottom__left
-              | Email: lskhanghai@khanghai.com.vn | Phone: + 84 (8) 37100638 | Hotline: 0909703706
-
+              | Email: lskhanghai@gmail.com | Phone: + 84 (8) 37100638 | Hotline: 0909703706
           .col-xs-12.col-md-6
             .footer-bottom__right © 2012–2017 www.khanghai.com.vn all rights reserved.
