Update client logos

--- a/app/views/home/_clients.html.slim
+++ b/app/views/home/_clients.html.slim
@@ -9,28 +9,34 @@
       .col-md-12
         .row
           .clients
-            .col-xs-6.col-md-2
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/ltnh.png'
-
-            .col-xs-6.col-md-2
+                = link_to image_tag('clients/ltnh.png'), 'http://congchungnhuhoa.vn/', target: '_blank'
+                p Văn phòng công chứng Lý Thị Như Hòa
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/mvs.png'
-
-            .col-xs-6.col-md-2
+                = link_to image_tag('clients/mvs.png'), 'http://minhvietson.com/', target: '_blank'
+                p Công ty cổ phần cơ khí tư vấn xây dựng dịch vụ Minh Việt Sơn
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/nstl.png'
-
-            .col-xs-6.col-md-2
+                = link_to image_tag('clients/nstl.png'), 'http://nongsantuonglai.com/', target: '_blank'
+                p Công ty TNHH nông sản Tương Lai
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/sasteco.png'
-
-            .col-xs-6.col-md-2
+                = link_to image_tag('clients/tl.png'), 'http://www.tuonglong.com/vn/', target: '_blank'
+                p Công ty TNHH dệt Tường Long
+        .row  
+          .clients
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/csg2.png'
-
-            .col-xs-6.col-md-2
+                = link_to image_tag('clients/thanhthanh.jpg'), 'http://www.thanhthanhceramic.com/', target: '_blank'
+                p Công ty cổ phần gạch men Thanh Thanh
+            .col-xs-6.col-md-3
               .client
-                = image_tag 'clients/tl.png'
-
+                = link_to image_tag('clients/phoenix.png'), 'http://www.phoenix-arts.com/', target: '_blank'
+                p Công ty TNHH vật liệu mỹ thuật Phượng Hoàng Việt Nam
+            .col-xs-6.col-md-3
+              .client
+                = link_to image_tag('clients/asn.png'), 'http://congchungchaua.vn/', target: '_blank'
+                p Văn phòng công chứng Châu Á
             .clearfix
