--- a/app/assets/stylesheets/home/_clients.scss
+++ b/app/assets/stylesheets/home/_clients.scss
@@ -12,20 +12,20 @@
   }
 
   .client {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+    text-align: center;
+    min-width: 150px;
 
-  img {
-    height: auto;
-    margin-bottom: 20px;
-    max-width: 100%;
-    opacity: .6;
-    transition: all 100ms ease-out;
+    img {
+      height: 100px;
+      width: auto;
+      margin-bottom: 20px;
+      max-width: 100%;
+      opacity: .6;
+      transition: all 100ms ease-out;
 
-    &:hover {
-      opacity: 1;
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 
