--- a/app/views/admin/services/_form.html.slim
+++ b/app/views/admin/services/_form.html.slim
@@ -2,6 +2,6 @@
   = f.input :title
   = f.input :priority
   = f.input :picture
-  = f.input :short_description, as: :ckeditor
+  = f.input :short_description
   = f.input :content, as: :ckeditor
   = f.submit t('shared.submit'), class: 'btn btn-default'
