--- a/app/views/admin/posts/show.html.slim
+++ b/app/views/admin/posts/show.html.slim
@@ -14,6 +14,9 @@
                   th ID
                   td = @post.id
                 tr
+                  th Loại bài viết
+                  td = @post.type_text
+                tr
                   th = t('post.title')
                   td = @post.title
                 tr
