--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -19,4 +19,4 @@
                       h4.latest-news__title = post.title
                       .latest-news__full-date = format_datetime(post.created_at)
 
-                = link_to 'More news', posts_path, class: 'latest-news latest-news--more-news'
+                = link_to 'Xem thêm', posts_path, class: 'latest-news latest-news--more-news'
