--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for [:admin, @post], wrapper: :vertical_form do |f|
+  = f.input :type
   = f.input :title
   = f.input :picture
   = f.input :category_id, as: :select, collection: Category.all.order(:name)
