--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,9 +2,7 @@
   = render 'slider'
   = render 'our_services'
   = render 'news' if @posts.any?
+  = render 'documents' if @documents.any?
+  = render 'question_and_answers' if @question_and_answers.any?
   = render 'forms' if @forms.any?
   = render 'clients'
-  / = render partial: 'shared/map', locals: { markers: [{lat: 10.8809411, lng: 106.5936243, description: 'Khang Hai Lawfirm'}].to_json,
-                                            center_lat: 10.8809411,
-                                            center_lng: 106.5936243,
-                                            zoom: 14 }
