--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -1,4 +1,8 @@
-.posts-post-container, .forms-form-container {
+.posts-post-container,
+.forms-form-container,
+.documents-document-container,
+.new-posts-new-post-container,
+.qnas-qna-container {
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 60px;
 
