--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -1,4 +1,8 @@
-#posts-show-container, #forms-show-container {
+#posts-show-container,
+#forms-show-container,
+#new-posts-show-container,
+#documents-show-container,
+#qnas-show-container {
   article {
     margin-bottom: 60px;
   }
