--- a/app/views/forms/_form.html.slim
+++ b/app/views/forms/_form.html.slim
@@ -10,4 +10,4 @@
         = link_to form.title.truncate(100), form
     .entry-content
       == form.content.truncate(400)
-      p = link_to 'Read more', form, class: 'more-link'
+      p = link_to 'Xem thêm', form, class: 'more-link'
