--- a/app/views/home/_documents.html.slim
+++ b/app/views/home/_documents.html.slim
@@ -19,4 +19,4 @@
                       h4.latest-news__title = document.title
                       .latest-news__full-date = format_datetime(document.created_at)
 
-                = link_to 'Xem thêm', documents_posts_path, class: 'latest-news latest-news--more-news'
+                = link_to 'Xem thêm', documents_path, class: 'latest-news latest-news--more-news'
