--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -14,4 +14,4 @@
     
     .entry-content
       == post.content.truncate(400)
-      p = link_to 'Read more', post, class: 'more-link'
+      p = link_to 'Xem thêm', post, class: 'more-link'
