--- a/app/views/qnas/index.html.slim
+++ b/app/views/qnas/index.html.slim
@@ -2,12 +2,12 @@
 - provide(:main_title_secondary, 'Những tin tức và câu chuyện pháp luật được trải nghiệm bởi chính đội ngũ luật sư chúng tôi')
 - breadcrumb :posts
 
-#posts-index-container
-  - if @posts.empty?
+#qans-index-container
+  - if @qnas.empty?
     p Không có bài viết
   - else
-    - @posts.each do |post|
-      = render post
+    - @qnas.each do |qna|
+      = render partial: 'qnas/qna', locals: { qna: qna}
 
     .pagination-wrapper
-      = will_paginate @posts, renderer: BootstrapPagination::Rails
+      = will_paginate @qnas, renderer: BootstrapPagination::Rails
