--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -29,20 +29,25 @@
                   - @posts.each do |post|
                     tr
                       td = post.id
-                      td = post.type
+                      td = post.type_text
                       td = post.title
                       td = image_tag post.picture.url, class: 'img-responsive'
-                      td = link_to post.category.name, admin_category_path(post.category)
+                      
+                      - if post.category
+                        td = link_to post.category.name, admin_category_path(post.category)
+                      - else
+                        td
+
                       td = link_to post.user.name, admin_user_path(post.user)
-                      td == post.content.truncate(400)
+                      td = post.content.truncate(400)
                       td = post.slug
                       td = format_datetime(post.created_at)
                       td = format_datetime(post.updated_at)
                       td
                         ul.list-inline
-                          li = link_to t('shared.show'), [:admin, post]
-                          li = link_to t('shared.edit'), [:edit, :admin, post]
-                          li = link_to t('shared.delete'), admin_post_path(post), method: :delete, data: { confirm: t('shared.confirm_delete') } 
+                          li = link_to t('shared.show'), [:admin, post.becomes(Post)]
+                          li = link_to t('shared.edit'), [:edit, :admin, post.becomes(Post)]
+                          li = link_to t('shared.delete'), admin_post_path(post.becomes(Post)), method: :delete, data: { confirm: t('shared.confirm_delete') } 
 
             .text-center
               = will_paginate @posts, renderer: BootstrapPagination::Rails, inner_window: 3, outer_window: 1
