Add description to post

--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -31,7 +31,7 @@
                       td = post.id
                       td = post.type_text
                       td = post.title
-                      td = image_tag post.picture.url, class: 'img-responsive'
+                      td = image_tag post.picture.url(:thumb), class: 'img-responsive'
                       
                       - if post.category
                         td = link_to post.category.name, admin_category_path(post.category)
