--- a/app/views/admin/posts/index.html.slim
+++ b/app/views/admin/posts/index.html.slim
@@ -20,6 +20,7 @@
                     th = t('post.picture')
                     th = t('post.category')
                     th = t('post.name')
+                    th Mô tả
                     th = t('post.content')
                     th = t('post.slug')
                     th = t('shared.created_at')
@@ -39,6 +40,7 @@
                         td
 
                       td = link_to post.user.name, admin_user_path(post.user)
+                      td = post.description
                       td = post.content.truncate(400)
                       td = post.slug
                       td = format_datetime(post.created_at)
